[tool.poetry]
name = "recallrai"
version = "0.3.2"
description = "Official Python SDK for RecallrAI - Revolutionary contextual memory system that enables AI assistants to form meaningful connections between conversations, just like human memory."
authors = ["Devasheesh Mishra <devasheeshmishra4@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/recallrai/sdk-python"
keywords = ["ai", "memory", "context", "llm", "mem0", "getzep", "zep"]
homepage = "https://recallrai.com"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pydantic = "^2.11.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
